--- a/midterm.html
+++ b/midterm.html
@@ -37,9 +37,12 @@
   <div class="activity-content">
     <div class="activity-text">
       <p class="activity-number">Activity #1</p>
-      <h3 class="activity-title">HTML Basics</h3>
-      <p>Created holiday pages using HTML text and images.</p>
-      <a href="https://aalearz.github.io/Holidayph/" target="_blank">View Project</a>
+      <h3 class="activity-title">HTML Text and Images</h3>
+      <p>Create individual web pages for three Philippine holidays using HTML
+         text and image tags and attributes.</p>
+         <button class="view">
+            <a href="https://aalearz.github.io/Holidayph/" target="_blank">View Project</a>
+         </button>
     </div>
     <div class="activity-image">
       <img src="act1.png" alt="Holiday Pages Preview">
