--- a/midterm.html
+++ b/midterm.html
@@ -56,7 +56,9 @@
       <p class="activity-number">Activity #2</p>
       <h3 class="activity-title">HTML Tags</h3>
       <p>Built a recipe page using various HTML tags.</p>
+      <button class="view">
       <a href="https://aalearz.github.io/RecipePage/" target="_blank">View Project</a>
+      </button>
     </div>
     <div class="activity-image">
       <img src="act2.png" alt="Recipe Page Preview">
